--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <div class="split right">
         <h2>Latest Release</h2>
           <div class="secondpage">
-            <p>Text Here</p>
+            <p>Hi lol</p>
             
           </div>
         </div>
