--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <div class="split left">
         <h2>Announcements</h2>
           <div class="secondpage">
-            <p>Text Here</p>
+            <p>sure</p>
           </div>
         </div>
         
