adding show listing image

--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
 						<!-- CHSPK -->
 						<article id="CHSPK">
 							<h2 class="major">Chesapeak Music</h2>
+							<img src="images/logo_blue.png" alt="www.chesapeakmusic.com" height="200" width="600"> <!--orig=2730 x 4096-->
+							<br/>
+							<img src="images/content/chesapeak_blacc.jpg" alt="www.chesapeakmusic.com" height="200" width="600">
 						</article>
 
 						<!-- Drink More Water -->
@@ -226,6 +229,7 @@
 							<p>At Chesapeak, we make an effort to drink more water every day, and you should too.</p>
 							<p>"Drinking more water can be life changing. Everyone should try it." - Joe Flacco</p>
 							<p>"I started drinking more water, and now I feel way better about my health and wellbeing." - Barack Obama</p>
+							<img src="images/dmw2.png" alt="www.chesapeakmusic.com">
 						</article>
 
 						<!-- Latest Release -->
@@ -329,8 +333,10 @@
         <div class="split right">
         <h2>Latest Release</h2>
           <div class="secondpage">
-            <p>Hi lol</p>
-            
+			<br/>
+			<img src="images/content/chesapeak_blacc.jpg" alt="www.chesapeakmusic.com" height="200" width="600">
+			<br/>
+			<img src="images/show_listing.png" alt="www.chesapeakmusic.com" width="600">
           </div>
         </div>
         
